--- a/assets/css/premium.scss
+++ b/assets/css/premium.scss
@@ -3,7 +3,7 @@
 @import 'base/reset';
 @import 'base/base';
 @import 'base/app';
-@import 'base/fonts';
+@import 'appResume/premium/fonts';
 @import 'base/keyframes';
 @import 'base/mixins';
 @import 'base/responsive';
