--- a/assets/css/ui/basic/_dropmenu.scss
+++ b/assets/css/ui/basic/_dropmenu.scss
@@ -204,13 +204,14 @@
             @extend .r100;
             @extend .mt0;
             @extend .mr-xs;
-            transform:translate3d(0, -30px, 0);
+            transform:translate3d(0, 0, 0);
 
             &:after {
+                @extend .display-none;
                 @extend .l-auto;
                 @extend .t0;
                 right:-16px;
-                transform:translate3d(0, 25px, 0) rotate(90deg);
+                transform:translate3d(0, 20px, 0) rotate(90deg);
             }
         }
     }
