--- a/assets/templates/appResume/premium/sections/info.html
+++ b/assets/templates/appResume/premium/sections/info.html
@@ -27,7 +27,7 @@
 
     $.on("mount", function(){
         if (app.device.isMobile){
-            $$($.wrapper).on('swipeleft', function(){
+            $$($.wrapper).on('swipeLeft', function(){
                 $.hide();
             });
         }
