--- a/assets/templates/appResume/premium/sections/salaryGraph.html
+++ b/assets/templates/appResume/premium/sections/salaryGraph.html
@@ -24,7 +24,7 @@
 
     $.on("mount", function(){
         if (app.device.isMobile){
-            $scope.on('swiperight', function(){
+            $scope.on('swipeRight', function(){
                 $.hide();
             });
         }
