--- a/public/css/mobile/ui/_icons.scss
+++ b/public/css/mobile/ui/_icons.scss
@@ -1,7 +1,5 @@
 @each $icon in (
-    loading, close_strong, minus, minus_white, plus_thin, plus_thin_white,
-    menu, menu_white, back, back_white, help, close_fill, close_fill_gray, close_fill_white,
-    info_white, check, check_black, check_white, check_gray, check_muted, check_circle_lime, hand_cursor_white, repeat
+    loading, loading_mini, loading_mini_white, close_strong, minus, minus_white, plus_thin, plus_thin_white, menu, menu_white, back, back_white, help, close_fill, close_fill_gray, close_fill_white, info_white, check, check_black, check_white, check_gray, check_muted, check_circle_lime, hand_cursor_white, repeat
 ){
     .ui-icon-#{$icon} {
         background:url('/assets/images/ui/ui-#{$icon}.svg') no-repeat 0 0 / cover;
