--- a/assets/css/sections/mobile/_navbar.scss
+++ b/assets/css/sections/mobile/_navbar.scss
@@ -8,10 +8,9 @@
     @extend .zIndex-1;
 
     &__item {
-        @extend .flex-centered;
+        @extend .flex-column-centered;
         @extend .w50p;
         @extend .h100p;
-        @extend .btn-active;
 
         &__icon {
             @extend .pos-rel;
@@ -34,6 +33,9 @@
                 @extend .boxShadow-close;
             }
         }
+        &__title {
+            @extend .c-gray;
+        }
         svg {
             @extend .display-block;
             @extend .pos-centered;
@@ -48,11 +50,14 @@
         }
         &[data-item="feedback"]{
             padding-bottom:2px;
-            @extend .pr-xs;
 
             svg {
                 @extend .w40;
                 @extend .h40;
+            }
+            .navbar__mobile__item__title {
+                @extend .pt-xxs;
+                @extend .mb--xxs;
             }
             .navbar__mobile__item__icon__badge {
                 transform:translate3d(1px, 2px, 0);
@@ -60,11 +65,14 @@
         }
         &[data-item="likes"]{
             padding-top:4px;
-            @extend .pl-xs;
 
             svg {
                 width:34px;
                 height:34px;
+            }
+            .navbar__mobile__item__title {
+                padding-top:1px;
+                margin-bottom:-4px;
             }
         }
     }
@@ -90,6 +98,18 @@
         }
         &[data-anim="true"]:after {
             @include animation(spinner, linear, .6s, false, infinite);
+        }
+    }
+}
+.navbar__mobile {
+    .navbar__mobile__item {
+        @extend .btn-active;
+
+        &[data-item="feedback"]{
+            @extend .pr-xs;
+        }
+        &[data-item="likes"]{
+            @extend .pl-xs;
         }
     }
 }
