--- a/assets/css/states/_sizes.scss
+++ b/assets/css/states/_sizes.scss
@@ -12,6 +12,14 @@
         height:$i * 5%;
     }
 }
+@for $i from 11 through 20 {
+    .w#{$i * 10} {
+        width:$i * 10px;
+    }
+    .h#{$i * 10} {
+        height:$i * 10px;
+    }
+}
 @for $i from 1 through 20 {
     .w#{$i * 5}v {
         width:$i * 5vw;
