--- a/assets/css/ui/basic/_button.scss
+++ b/assets/css/ui/basic/_button.scss
@@ -188,9 +188,7 @@
             width:20px;
             height:20px;
         }
-        &.btn-svg-graph {
-            transform:translateY(-2px);
-        }
+        &.btn-svg-graph,
         &.btn-svg-repeat {
             transform:translateY(-2px);
         }
