--- a/assets/templates/appResume/premium/sections/menu/menuSections.html
+++ b/assets/templates/appResume/premium/sections/menu/menuSections.html
@@ -35,7 +35,7 @@
 
     $.on("mount", function(){
         if (app.device.isPhone){
-            $scope.on('swiperight', function(){
+            $scope.on('swipeRight', function(){
                 $Menu.hide();
             });
         }
